ui/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-ui-svc
  namespace: open5gs
spec:
  selector:
    app: core-ui
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
